--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -1,11 +1,11 @@
-name: ssh-into-aws-ec2
+name: redeploy
 
 on:
   push:
     branches: [ "main" ]
 
 env:
-  REMOTE_HOST: "ec2-18-206-126-244.compute-1.amazonaws.com"
+  REMOTE_HOST: "ec2-54-157-196-19.compute-1.amazonaws.com"
   REMOTE_USER: "ec2-user"
 
 permissions:
@@ -13,7 +13,7 @@ permissions:
   id-token: write
 
 jobs:
-  test:
+  redeploy:
     runs-on: ubuntu-latest
 
     steps:
