--- a/.github/workflows/runtest.yml
+++ b/.github/workflows/runtest.yml
@@ -15,4 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Run tests
-        run: ls
+        run: |
+          ls -a
+          pytest
+    
