--- a/.github/workflows/runtest.yml
+++ b/.github/workflows/runtest.yml
@@ -16,6 +16,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Run tests
         run: |
-          ls -a
+          pip install pytest
           pytest
     
